--- a/react/tsconfig.node.json
+++ b/react/tsconfig.node.json
@@ -18,7 +18,11 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    /* Node.js */
+    "composite": true,
+    "jsx": "react-jsx"
   },
   "include": ["vite.config.ts"]
 }
